# my-iris-client

./: .dockerignore  .env.test  .eslintignore  .eslintrc  .gitignore  .lighthouserc.js  .prettierignore  .prettierrc  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  PRIVATE_CHATS_MIGRATION.md  PUSH_NOTIFICATIONS_SETUP.md  README.docker.md  README.md  android-fcm-setup.md  custom.d.ts  debug.html  docker-compose.dev.yml  docker-compose.yml  index.html  ios-push-setup.md  knip.json  package.json  performance-baselines.json  playwright.config.ts  replace-imports.sed  tailwind.config.js  tsconfig.json  vite.config.ts  zapstore.yaml
.github/workflows/: checks.yml  ci.yml  e2e-tests.yml  pagespeed.yml  tauri.yml  tests-e2e.yml  tests-ndk.yml  tests-unit.yml  tests.yml  unit-tests.yml
config/: default.json  dev.json  nestr.json
dev-relay/: Dockerfile  README.md  docker-compose-ci.yml  docker-compose.yml  quick-seed.sh  strfry-ci.conf  strfry.conf  wait-for-strfry.sh
public/: _redirects  cache-worker.js
public/cashu/: index.html
scripts/: lighthouse-test.js  performance-baseline.ts  updateSocialGraph.ts
src/: index.css  main.tsx  service-worker.ts
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: filter_parser.rs  lib.rs  nostr_thread.rs  nostr_types.rs  relay_handlers.rs  subscription_handlers.rs
src/contexts/: ScrollContext.tsx  ScrollContextValue.ts  useScrollContainer.ts
src/debug/: DebugApp.tsx  DebugSession.ts  README.md  SessionTest.tsx  main.tsx
src/hooks/: useAnimatedQR.ts  useCashuSeed.ts
src/lib/: ndk-transport-plugin.ts  ndk-transport-tauri.ts  ndk-transport-types.ts  ndk-transport-worker.ts  npubcash.ts
src/navigation/: Link.tsx  NavigationProvider.tsx  RouteContext.tsx  Router.tsx  RoutesComponent.tsx  contexts.ts  hooks.ts  index.ts  routeContexts.ts  routeMatcher.ts  routes.tsx  types.ts  useIsTopOfStack.ts  utils.ts
src/pages/: AboutPage.tsx  CsaePage.tsx  HelpPage.tsx  NostrLinkHandler.tsx  Page404.tsx  PrivacyPage.tsx  index.tsx  (+1 more)
tests/: auth.setup.ts  cashu-memo.spec.ts  chat-invite.spec.ts  debug-dr.spec.ts  debug-market-map.spec.ts  draft-persistence.spec.ts  feed-performance.spec.ts  follow-user.spec.ts  for-you-feed.spec.ts  hashtag.spec.ts  header-client-nav.spec.ts  header-final-test.spec.ts  header-hide-all-views.spec.ts  header-manual-test.spec.ts  header-nav-scroll.spec.ts  header-navigation.spec.ts  home-scroll-behavior.spec.ts  home.spec.ts  like-post.spec.ts  market-map-location.spec.ts  message-form.spec.ts  message-persistence.spec.ts  message-reaction.spec.ts  multi-device-groups.spec.ts  mute-user.spec.ts  navigation-stack.spec.ts  navigation.spec.ts  negentropy-subscribe.spec.ts  negentropy-sync.spec.ts  new-chat.spec.ts  new-post.spec.ts  notification.spec.ts  popular-feed-debug.spec.ts  profile-dropdown.spec.ts  profile-qr.spec.ts  profile-search.spec.ts  relay-manual-add.spec.ts  relay-offline-detection.spec.ts  reply-draft-persistence.spec.ts  reply-post.spec.ts  (+14 more)
(+932 files in other folders)
