[package]
name = "iris"
version = "2.3.2"
description = "Iris"
authors = ["Martti Malmi"]
license = "MIT"
repository = "https://github.com/irislib/iris-client.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-swipe-back-ios = "1.0.0"
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-os = "2"
nostrdb = { git = "https://github.com/mmalmi/nostrdb-rs.git", version = "0.8.0" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
