[package]
name = "iris"
version = "2.4.0"
description = "Iris"
authors = ["Martti Malmi"]
license = "MIT"
repository = "https://github.com/irislib/iris-client.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2.6.2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-swipe-back-ios = "1.0.0"
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-os = "2"
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "6956b9f955463404b8eff3b7abe0cc3092cb5958" }
enostr = { git = "https://github.com/damus-io/notedeck", rev = "a4c6cfd445511c747433914ad6df034cfbea94fd" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
